# global_variable_watcher

./: .gitignore  CMakeLists.txt  README.md  annotated.html  args_8cpp.html  args_8cpp__incl.map  args_8cpp__incl.md5  args_8cpp_source.html  args_8hpp.html  args_8hpp__dep__incl.map  args_8hpp__dep__incl.md5  args_8hpp__incl.map  args_8hpp__incl.md5  args_8hpp_a5730c8fb2a4149f388bbcbb1e9c9888d_icgraph.map  args_8hpp_a5730c8fb2a4149f388bbcbb1e9c9888d_icgraph.md5  args_8hpp_afab1557244eb6ab3cb446f0e7cad8905_icgraph.map  args_8hpp_afab1557244eb6ab3cb446f0e7cad8905_icgraph.md5  args_8hpp_source.html  build.sh  classDebugger-members.html  classDebugger.html  classDebugger_a0fb68979aeda450247b147fc2d3cce33_cgraph.map  classDebugger_a0fb68979aeda450247b147fc2d3cce33_cgraph.md5  classDebugger_a0fb68979aeda450247b147fc2d3cce33_icgraph.map  classDebugger_a0fb68979aeda450247b147fc2d3cce33_icgraph.md5  classDebugger_a944ac1668f45b26a0da57b57ec159e78_cgraph.map  classDebugger_a944ac1668f45b26a0da57b57ec159e78_cgraph.md5  classDebugger_a944ac1668f45b26a0da57b57ec159e78_icgraph.map  classDebugger_a944ac1668f45b26a0da57b57ec159e78_icgraph.md5  classDebugger_ac7d0423cddbb4b630749e6b13c4c1ed5_cgraph.map  classDebugger_ac7d0423cddbb4b630749e6b13c4c1ed5_cgraph.md5  classDebugger_ac7d0423cddbb4b630749e6b13c4c1ed5_icgraph.map  classDebugger_ac7d0423cddbb4b630749e6b13c4c1ed5_icgraph.md5  classes.html  debugger_8cpp.html  debugger_8cpp__incl.map  debugger_8cpp__incl.md5  debugger_8cpp_a026bafbd79531068f563be4582a62a04_icgraph.map  debugger_8cpp_a026bafbd79531068f563be4582a62a04_icgraph.md5  debugger_8cpp_a508830d991569eaf3d8f36366ad68092_cgraph.map  (+67 more)
include/: args.hpp  debugger.hpp  elf_utils.hpp  memory_utils.hpp  types.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_5.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: args.cpp  debugger.cpp  elf_utils.cpp  main.cpp  memory_utils.cpp  testprog.cpp
tests/: test_elf_utils.cpp
tests/integration/: test_integration_gwatch.cpp
tests/unit/: test_debugger_utils.cpp  test_elf_utils.cpp  test_memory_utils.cpp
